Fixed scrollbar issue

--- a/public/style/main.less
+++ b/public/style/main.less
@@ -11,6 +11,7 @@ body > div {
 }
 
 html{
+	height: ~"calc(100% - 3px)";
 	background: rgba(0,0,0,0.1);
 }
 
