--- a/public/style/plugins/plugins.less
+++ b/public/style/plugins/plugins.less
@@ -2,4 +2,5 @@ iframe.plugin_interface {
 	border: none;
 	width: 100%;
 	height: 100%;
+	overflow: auto;
 }
